--- a/about.html
+++ b/about.html
@@ -39,10 +39,12 @@
 		var divs = $('span[id^="content-"]').hide(),
 			i = 0;
 
-		(function cycle() {
-			divs.eq(i).animate({width:'toggle'},350).fadeIn(400).delay(2000).fadeOut(400, cycle);
-			i = ++i % divs.length;
-		})();
+		$(document).ready(function() {
+			(function cycle() {
+				divs.eq(i).animate({width:'toggle'},350).fadeIn(400).delay(2000).fadeOut(400, cycle);
+				i = ++i % divs.length;
+			})();
+		});
 		</script>
 		</div>
 	</div>
