--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="groupup" id="barba-wrapper">
 		<div <div class="barba-container">
-			<div class="center_center">
+			<div class="center_center" onload="cycle()>
 				<div class="circle">
 					<img class="img_resp_center" src="img/1.png" id="showcase">
 				</div>
