--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="barba-wrapper">
-		<div class="barba-container">
+		<div class="barba-container" data-namespace="home">
 			<div id="content">
 				<div class="center_center">
 					<div class="circle">
