--- a/about.html
+++ b/about.html
@@ -5,11 +5,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<script src="js/barba.min.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="groupup" id="barba-wrapper">
-		<div <div class="barba-container">
+		<div <div class="barba-container" data-namespace="about">
 			<div class="center_center">
 				<div class="circle">
 					<img class="img_resp_center" src="img/1.png" id="showcase">
@@ -35,8 +34,21 @@
 				</div>
 				<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 			</div>
+		<script type="text/javascript">
+		//Change words on about page
+		
+
+		var divs = $('span[id^="content-"]').hide(),
+			i = 0;
+
+		(function cycle() {
+			divs.eq(i).animate({width:'toggle'},350).fadeIn(400).delay(2000).fadeOut(400, cycle);
+			i = ++i % divs.length;
+			})();
+		</script>
 		</div>
 	</div>
 </body>
+	<script src="js/barba.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </html>
