--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 			<div class="black_left">
 				<span class="home_spacing vertical_centered_text r40w500 underline"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
 				<div class="left_holder">
-					<div class="r70w500"><span id="content-0">Visual</span><span id="content-1"></span><span id="content-2">Graphic</span><span id="content-3">Web</span><span id="content-4">UI/UX</span><br>Designer,<br>Creative<br>& Maker.</div>
+					<div class="r70w500"><span id="content-1">Visual</span><span id="content-2">Graphic</span><span id="content-3">Web</span><span id="content-4">UI/UX</span><br>Designer,<br>Creative<br>& Maker.</div>
 					<div class="r20y500 space10">Yago Murakami</div>
 					<div class="r15w300 space50"><a href="mailto:yagowns@gmail.com" class="underline">yagowns@gmail.com</a><br>@yagomurakami</div>
 					<div class="r15w500 space50"><a href="https://www.behance.net/YagoMurakami" class="underline">Behance</a> - <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a> - <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a></div>
@@ -34,18 +34,6 @@
 				</div>
 				<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 			</div>
-		<script type="text/javascript">
-		//Change words on about page
-		
-
-		var divs = $('span[id^="content-"]').hide(),
-			i = 0;
-
-		(function cycle() {
-			divs.eq(i).animate({width:'toggle'},350).fadeIn(400).delay(2000).fadeOut(400, cycle);
-			i = ++i % divs.length;
-			})();
-		</script>
 		</div>
 	</div>
 </body>
