--- a/work.html
+++ b/work.html
@@ -9,77 +9,81 @@
 	<script src="js/barba.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="top_left">
-		<span class="r40y500" id="yagomurakami">Ya Mu</span>
-		<div class="back_menu">
-			<a href="index.html" class="back">&#11104; Home</a>
-		</div>
-	</div>
-	<div class="section">
-		<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
-		<div class="white_left">
-			<div class="left_holder">
-				<div class="r70b500 space30">
-					<a href="#" class="underline" id="one">[A]Live Cash</a><span class="numbers r30y700">1</span>
-				</div>
-				<div class="r70b500 space30">
-					<a href="#" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
-				</div>
-				<div class="r70b500 space30">
-					<a href="#" class="underline" id="three">MDS Rebrand</a><span class="numbers r30y700">3</span>
-				</div>
-				<div class="r70b500 space30">
-					<a href="#" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
-				</div>
-				<div class="r70b500 space30">
-					<a href="#" class="underline" id="five">Flickering [Mis]Information</a><span class="numbers r30y700">5</span>
-				</div>
-				<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
-			</div>
-		</div>
-		<div class="empty_right"></div>
-		<div class="below_white" id="more">
-			<div class="web_work">
-				<div class="margins_one">
-					<div class="r15b400">More web design work</div>
-					<div class="r30b500 space10">
-						<a href="#" class="underline">Algarve-invest*</a>, <a href="#" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="#" class="underline">Correio da Manhã Canadá</a>, <a href="#" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="#" class="underline">Minuto de Silêncio Podcast*</a> e <a href="#" class="underline">Sonomage*</a>.
-					</div>
-					<div class="r15b400 space20">*Web design, Logo & Branding</div>
+	<div id="barba-wrapper">
+		<div class="barba-container" data-namespace="home">
+			<div class="top_left">
+				<span class="r40y500" id="yagomurakami">Ya Mu</span>
+				<div class="back_menu">
+					<a href="index.html" class="back">&#11104; Home</a>
 				</div>
 			</div>
-			<div class="other_work">
-				<div class="margins_two">
-					<div class="r15b400">Brands I’ve worked with</div>
-					<div class="r20b500 space10">
-						<span class="underline" id="aerosoles">Aerosoles</span>,
-						<span class="underline" id="azoris">Azoris</span>,
-						<span class="underline" id="cci">CCI Luso Française</span>,
-						<span class="underline" id="nutella">Nutella</span>,
-						<span class="underline" id="tendam">Tendam</span>,
-						<span class="underline" id="cortefiel">Cortefiel</span>,
-						<span class="underline" id="pedrodelhierro">Pedro del Hierro</span>,
-						<span class="underline" id="springfield">Springfield</span>,
-						<span class="underline" id="womensecret">WomenSecret</span>,
-						<span class="underline" id="diadermine">Diadermine</span>,
-						<span class="underline" id="schwarzkopf">Schwarzkopf</span>,
-						<span class="underline" id="syoss">Syoss</span>,
-						<span class="underline" id="bayou">Bayou Rum</span>,
-						<span class="underline" id="cointreau">Cointreau</span>,
-						<span class="underline" id="fiuza">Fiuza</span>,
-						<span class="underline" id="glenfiddich">Glenfiddich</span>,
-						<span class="underline" id="hendricks">Hendricks</span>,
-						<span class="underline" id="grous">Herdade dos Grous</span>,
-						<span class="underline" id="valbom">Quinta de Valbom</span>,
-						<span class="underline" id="fornodeminas">Forno de Minas</span>,
-						<span class="underline" id="gatorade">Gatorade</span> &
-						<span class="underline" id="nike">Nike.</span>
+			<div class="section">
+				<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_work">About me</a></span>
+				<div class="white_left">
+					<div class="left_holder">
+						<div class="r70b500 space30">
+							<a href="#" class="underline" id="one">[A]Live Cash</a><span class="numbers r30y700">1</span>
+						</div>
+						<div class="r70b500 space30">
+							<a href="#" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
+						</div>
+						<div class="r70b500 space30">
+							<a href="#" class="underline" id="three">MDS Rebrand</a><span class="numbers r30y700">3</span>
+						</div>
+						<div class="r70b500 space30">
+							<a href="#" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
+						</div>
+						<div class="r70b500 space30">
+							<a href="#" class="underline" id="five">Flickering [Mis]Information</a><span class="numbers r30y700">5</span>
+						</div>
+						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
 				</div>
-			</div>
-			<div class="logos_sections">
-				<div class="margins_three">
-					<div class="logos_rec"></div>
+				<div class="empty_right"></div>
+				<div class="below_white" id="more">
+					<div class="web_work">
+						<div class="margins_one">
+							<div class="r15b400">More web design work</div>
+							<div class="r30b500 space10">
+								<a href="#" class="underline">Algarve-invest*</a>, <a href="#" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="#" class="underline">Correio da Manhã Canadá</a>, <a href="#" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="#" class="underline">Minuto de Silêncio Podcast*</a> e <a href="#" class="underline">Sonomage*</a>.
+							</div>
+							<div class="r15b400 space20">*Web design, Logo & Branding</div>
+						</div>
+					</div>
+					<div class="other_work">
+						<div class="margins_two">
+							<div class="r15b400">Brands I’ve worked with</div>
+							<div class="r20b500 space10">
+								<span class="underline" id="aerosoles">Aerosoles</span>,
+								<span class="underline" id="azoris">Azoris</span>,
+								<span class="underline" id="cci">CCI Luso Française</span>,
+								<span class="underline" id="nutella">Nutella</span>,
+								<span class="underline" id="tendam">Tendam</span>,
+								<span class="underline" id="cortefiel">Cortefiel</span>,
+								<span class="underline" id="pedrodelhierro">Pedro del Hierro</span>,
+								<span class="underline" id="springfield">Springfield</span>,
+								<span class="underline" id="womensecret">WomenSecret</span>,
+								<span class="underline" id="diadermine">Diadermine</span>,
+								<span class="underline" id="schwarzkopf">Schwarzkopf</span>,
+								<span class="underline" id="syoss">Syoss</span>,
+								<span class="underline" id="bayou">Bayou Rum</span>,
+								<span class="underline" id="cointreau">Cointreau</span>,
+								<span class="underline" id="fiuza">Fiuza</span>,
+								<span class="underline" id="glenfiddich">Glenfiddich</span>,
+								<span class="underline" id="hendricks">Hendricks</span>,
+								<span class="underline" id="grous">Herdade dos Grous</span>,
+								<span class="underline" id="valbom">Quinta de Valbom</span>,
+								<span class="underline" id="fornodeminas">Forno de Minas</span>,
+								<span class="underline" id="gatorade">Gatorade</span> &
+								<span class="underline" id="nike">Nike.</span>
+							</div>
+						</div>
+					</div>
+					<div class="logos_sections">
+						<div class="margins_three">
+							<div class="logos_rec"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
