--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="barba-wrapper">
-		<div class="barba-container" data-namespace="home">
+		<div class="barba-container" data-namespace="work">
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
