--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 				<div class="middle_bottom">
 					<span class="r40b500"><a class="hide_hyper" href="mailto:yagowns@gmail.com">yagowns@gmail.com</a></span>
 				</div>
-				<div class="yellow_left">
-					<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_home">About me</a></span>
-				</div>
-				<div class="white_right">
-					<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_home">My work</a></span>
+				<div class="groupup">
+					<div class="yellow_left">
+						<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_home">About me</a></span>
+					</div>
+					<div class="white_right">
+						<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_home">My work</a></span>
+					</div>
 				</div>
 			</div>
 		</div>
