--- a/about.html
+++ b/about.html
@@ -19,35 +19,25 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 			</div>
-			<div class="black_left">
-				<span class="home_spacing vertical_centered_text r40w500 underline"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
-				<div class="left_holder">
-					<div class="r70w500"><span id="content-1">Visual</span><span id="content-2">Graphic</span><span id="content-3">Web</span><span id="content-4">UI/UX</span><br>Designer,<br>Creative<br>& Maker.</div>
-					<div class="r20y500 space10">Yago Murakami</div>
-					<div class="r15w300 space50"><a href="mailto:yagowns@gmail.com" class="underline">yagowns@gmail.com</a><br>@yagomurakami</div>
-					<div class="r15w500 space50"><a href="https://www.behance.net/YagoMurakami" class="underline">Behance</a> - <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a> - <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a></div>
+			<div class="groupup">
+				<div class="black_left">
+					<span class="home_spacing vertical_centered_text r40w500 underline"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
+					<div class="left_holder">
+						<div class="r70w500"><span id="content-1">Visual</span><span id="content-2">Graphic</span><span id="content-3">Web</span><span id="content-4">UI/UX</span><br>Designer,<br>Creative<br>& Maker.</div>
+						<div class="r20y500 space10">Yago Murakami</div>
+						<div class="r15w300 space50"><a href="mailto:yagowns@gmail.com" class="underline">yagowns@gmail.com</a><br>@yagomurakami</div>
+						<div class="r15w500 space50"><a href="https://www.behance.net/YagoMurakami" class="underline">Behance</a> - <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a> - <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a></div>
+					</div>
+				</div>
+				<div class="yellow_right">
+					<div class="right_holder">
+						<div class="r50b500">About_</div>
+						<p class="r15b400">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+						<div class="r15b700 space50"><a href="#" class="underline">Download my resumé +</a></div>
+					</div>
+					<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 				</div>
 			</div>
-			<div class="yellow_right">
-				<div class="right_holder">
-					<div class="r50b500">About_</div>
-					<p class="r15b400">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-					<div class="r15b700 space50"><a href="#" class="underline">Download my resumé +</a></div>
-				</div>
-				<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
-			</div>
-		<script type="text/javascript">
-		//Change words on about page
-		
-
-		var divs = $('span[id^="content-"]').hide(),
-			i = 0;
-
-		(function cycle() {
-			divs.eq(i).animate({width:'toggle'},350).fadeIn(400).delay(2000).fadeOut(400, cycle);
-			i = ++i % divs.length;
-			})();
-		</script>
 		</div>
 	</div>
 </body>
