--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 				</div>
 				<div class="groupup">
 					<div class="yellow_left">
-						<span class="about_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="about.html" id="about_home">About me</a></span>
+						<span class="about_spacing vertical_centered_text r40b500 underline" id="aboutmehomebtn"><a class="hide_hyper" href="about.html" id="about_home">About me</a></span>
 					</div>
 					<div class="white_right">
-						<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_home">My work</a></span>
+						<span class="work_spacing vertical_centered_text r40b500 underline" id="workhomebtn"><a class="hide_hyper" href="work.html" id="work_home">My work</a></span>
 					</div>
 				</div>
 			</div>
