--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 				<div class="black_left">
 					<span class="home_spacing vertical_centered_text r40w500 underline"><a class="hide_hyper" href="index.html" id="home_about">Home</a></span>
 					<div class="left_holder">
-						<div class="r70w500"><span id="content-1">Visual</span><br>Designer,<br>Creative<br>& Maker.</div>
+						<div class="r70w500"><span>Visual</span><br>Designer,<br>Creative<br>& Maker.</div>
 						<div class="r20y500 space10">Yago Murakami</div>
 						<div class="r15w300 space50"><a href="mailto:yagowns@gmail.com" class="underline">yagowns@gmail.com</a><br>@yagomurakami</div>
 						<div class="r15w500 space50"><a href="https://www.behance.net/YagoMurakami" class="underline">Behance</a> - <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a> - <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a></div>
