--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="barba-container" data-namespace="home">
 			<div id="content">
 				<div class="center_center">
-					<div class="circle">
+					<div class="circle_home">
 						<img class="img_resp_center" src="img/1.png" id="showcase">
 					</div>
 				</div>
