--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<span class="r40b500">Yago Murakami</span>
 				</div>
 				<div class="middle_bottom">
-					<span class="r15b400 popup">Let's talk</span>
+					<span class="r15b400 popup">Let's talk</span><br>
 					<span class="r40b500" id="email"><a class="hide_hyper" href="mailto:yagowns@gmail.com">yagowns@gmail.com</a></span>
 				</div>
 				<div class="groupup">
