--- a/work.html
+++ b/work.html
@@ -39,7 +39,13 @@
 						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
 				</div>
-				<div class="empty_right"></div>
+				<div class="empty_right">
+					<img src="img/alivecash2.gif" class="showcase_img" id="project_one">
+					<img src="img/purge2.gif" class="showcase_img" id="project_two">
+					<img src="img/2.png" class="showcase_img" id="project_three">
+					<img src="img/2.png" class="showcase_img" id="project_four">
+					<img src="img/2.png" class="showcase_img" id="project_five">
+				</div>
 				<div class="below_white" id="more">
 					<div class="web_work">
 						<div class="margins_one">
