--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
 				<div class="empty_right">
 					<img src="img/alivecash2.gif" class="showcase_img" id="project_one">
 					<img src="img/purge2.gif" class="showcase_img" id="project_two">
-					<img src="img/minuto2.png" class="showcase_img" id="project_three">
+					<img src="img/minuto2.gif" class="showcase_img" id="project_three">
 					<img src="img/2.png" class="showcase_img" id="project_four">
 					<img src="img/2.png" class="showcase_img" id="project_five">
 				</div>
