--- a/work.html
+++ b/work.html
@@ -60,10 +60,18 @@
 						<div class="margins_two">
 							<div class="r15b400">Brands I’ve worked with</div>
 							<div class="r20b500 space10">
-								<span class="underline" id="aerosoles">Aerosoles</span>,
-								<span class="underline" id="azoris">Azoris</span>,
-								<span class="underline" id="cci">CCI Luso Française</span>,
+								<span class="underline" id="nike">Nike</span>,
+								<span class="underline" id="gatorade">Gatorade</span>,
+								<span class="underline" id="fornodeminas">Forno de Minas</span>,
+								<span class="underline" id="piraque">Piraquê</span>,
 								<span class="underline" id="nutella">Nutella</span>,
+								<span class="underline" id="hendricks">Hendricks</span>,
+								<span class="underline" id="glenfiddich">Glenfiddich</span>,
+								<span class="underline" id="cointreau">Cointreau</span>,
+								<span class="underline" id="bayou">Bayou Rum</span>,
+								<span class="underline" id="fiuza">Fiuza</span>,
+								<span class="underline" id="grous">Herdade dos Grous</span>,
+								<span class="underline" id="casalgarcia">Casal Garcia</span>,
 								<span class="underline" id="tendam">Tendam</span>,
 								<span class="underline" id="cortefiel">Cortefiel</span>,
 								<span class="underline" id="pedrodelhierro">Pedro del Hierro</span>,
@@ -72,16 +80,9 @@
 								<span class="underline" id="diadermine">Diadermine</span>,
 								<span class="underline" id="schwarzkopf">Schwarzkopf</span>,
 								<span class="underline" id="syoss">Syoss</span>,
-								<span class="underline" id="bayou">Bayou Rum</span>,
-								<span class="underline" id="cointreau">Cointreau</span>,
-								<span class="underline" id="fiuza">Fiuza</span>,
-								<span class="underline" id="glenfiddich">Glenfiddich</span>,
-								<span class="underline" id="hendricks">Hendricks</span>,
-								<span class="underline" id="grous">Herdade dos Grous</span>,
-								<span class="underline" id="valbom">Quinta de Valbom</span>,
-								<span class="underline" id="fornodeminas">Forno de Minas</span>,
-								<span class="underline" id="gatorade">Gatorade</span> &
-								<span class="underline" id="nike">Nike.</span>
+								<span class="underline" id="aerosoles">Aerosoles</span>,
+								<span class="underline" id="azoris">Azoris</span> &
+								<span class="underline" id="cci">CCI Luso Française</span>.
 							</div>
 						</div>
 					</div>
