--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
 						<div class="margins_one">
 							<div class="r15b400">More web design work</div>
 							<div class="r30b500 space10">
-								<a href="#" class="underline">Algarve-invest*</a>, <a href="#" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="#" class="underline">Correio da Manhã Canadá</a>, <a href="#" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="#" class="underline">Minuto de Silêncio Podcast*</a> e <a href="#" class="underline">Sonomage*</a>.
+								<a href="#" target="_blank" class="underline">Algarve-invest*</a>, <a href="#" target="_blank" class="underline">Casa-Museu Medeiros Almedia</a>, <a href="#" target="_blank" class="underline">Correio da Manhã Canadá</a>, <a href="#" target="_blank" class="underline">Merlin Filmes + Conteúdos*</a>, <a href="#" target="_blank" class="underline">Minuto de Silêncio Podcast*</a> e <a href="#" target="_blank" class="underline">Sonomage*</a>.
 							</div>
 							<div class="r15b400 space20">*Web design, Logo & Branding</div>
 						</div>
