--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 							<a href="#" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="five">Flickering [Mis]Information</a><span class="numbers r30y700">5</span>
+							<a href="#" class="underline" id="five">Logofolio</a><span class="numbers r30y700">5</span>
 						</div>
 						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
