--- a/work.html
+++ b/work.html
@@ -7,6 +7,32 @@
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="js/barba.min.js" type="text/javascript"></script>
+	<link rel="preload" as="image" href="img/alivecash2.gif">
+	<link rel="preload" as="image" href="img/purge2.gif">
+	<link rel="preload" as="image" href="img/minuto2.gif">
+	<link rel="preload" as="image" href="img/100klives.gif">
+	<link rel="preload" as="image" href="img/nike.png">
+	<link rel="preload" as="image" href="img/gatorade.png">
+	<link rel="preload" as="image" href="img/nutella.png">
+	<link rel="preload" as="image" href="img/hendricks.png">
+	<link rel="preload" as="image" href="img/glenfiddich.png">
+	<link rel="preload" as="image" href="img/cointreau.png">
+	<link rel="preload" as="image" href="img/bayou.png">
+	<link rel="preload" as="image" href="img/adegavelha.png">
+	<link rel="preload" as="image" href="img/fiuza.png">
+	<link rel="preload" as="image" href="img/grous.png">
+	<link rel="preload" as="image" href="img/casalgarcia.png">
+	<link rel="preload" as="image" href="img/tendam.png">
+	<link rel="preload" as="image" href="img/cortefiel.png">
+	<link rel="preload" as="image" href="img/pedrodelhierro.png">
+	<link rel="preload" as="image" href="img/springfield.png">
+	<link rel="preload" as="image" href="img/womensecret.png">
+	<link rel="preload" as="image" href="img/diadermine.png">
+	<link rel="preload" as="image" href="img/schwarzkopf.png">
+	<link rel="preload" as="image" href="img/syoss.png">
+	<link rel="preload" as="image" href="img/aerosoles.png">
+	<link rel="preload" as="image" href="img/azoris.png">
+	<link rel="preload" as="image" href="img/cci.png">
 </head>
 <body>
 	<div id="barba-wrapper">
