--- a/about.html
+++ b/about.html
@@ -18,6 +18,77 @@
 			</div>
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
+				<div class="back_menu">
+					<a href="index.html" class="back">&#11104; Home</a>
+				</div>
+			</div>
+			<div class="portf_group animated fadeIn faster delay-150ms">
+				<div class="first_col">
+					<span class="r30b500">Yago Murakami | yagowns@gmail.com</span>
+					<div class="space10"></div>
+					<span class="r20b500">Currently based in Lisbon, Portugal</span>
+					<div class="space50"></div>
+				</div>
+				<div class="second_col">
+					<span class="r20b500">&#11106; Education</span>
+					<div class="space10"></div>
+					<span class="r15b700">IADE<br>Faculdade de Design, Tecnologia e Comunicação</span>
+					<br>
+					<span class="r15b400">Graduate, Visual Design,<br>2011 to 2014, Lisbon, Portugal</span>
+					<div class="space30"></div>
+					<span class="r15b700">PUC-Rio<br>Pontifícia Universidade Católica do Rio de Janeiro</span>
+					<br>
+					<span class="r15b400">Exchange Program, Visual Design,<br>2013 to 2014, Rio de Janeiro, Brazil</span>
+					<div class="space30"></div>
+					<span class="r15b700">FBAUL<br>Faculdade de Belas Artes da Universidade de Lisboa</span>
+					<br>
+					<span class="r15b400">Postgraduate, Communication Design and New Media,<br>2016 to 2017, Lisbon, Portugal</span>
+					</div>
+				<div class="third_col">
+					<span class="r20b500">&#11106; Experience</span>
+					<div class="space10"></div>
+					<span class="r15b700">Effect Sport</span>
+					<br>
+					<span class="r15b400">Marketing Agency,<br>Web & Graphic Designer,<br>August 2013 to April 2015, Rio de Janeiro, Brazil</span>
+					<div class="space30"></div>
+					<span class="r15b700">YXE</span>
+					<br>
+					<span class="r15b400">Marketing & Publicity Agency,<br>Web & Graphic Designer,<br>April 2015 to October 2015, Rio de Janeiro, Brazil</span>
+					<div class="space30"></div>
+					<span class="r15b700">Media Consulting</span>
+					<br>
+					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to present day, Lisbon, Portugal</span>
+					<div class="space20 divider"></div>
+					<div class="space20"></div>
+					<span class="r20b500">= 5 years of agency experience.</span>
+				</div>
+				<div class="fourth_col">
+					<span class="r20b500">&#11106; Knowledge and Skills</span>
+					<div class="space10"></div>
+					<span class="r15b700">Graphic</span>
+					<br>
+					<span class="r15b400">Photoshop, Illustrator, Indesign & Sketch.</span>
+					<div class="space10"></div>
+					<span class="r15b700">Web</span>
+					<br>
+					<span class="r15b400">HTML5, CSS3, JavaScript & Wordpress.</span>
+					<div class="space10"></div>
+					<span class="r15b700">Motion</span>
+					<br>
+					<span class="r15b400">Premiere & After Effects.</span>
+					<div class="space10"></div>
+					<span class="r15b700">3D</span>
+					<br>
+					<span class="r15b400">3D Max, Sketch Up & Auto Cad.</span>
+					<div class="space30"></div>
+					<span class="r20b500">&#11106; Languages</span>
+					<div class="space10"></div>
+					<span class="r15b400">English & Portuguese</span>
+					<div class="space30"></div>
+					<span class="r20b500">&#11106; Hobbies/Interests</span>
+					<div class="space10"></div>
+					<span class="r15b400">Reading/collecting books & comics, writing short stories, painting (leaning towards color field & geometric abstraction styles), programming interactive/reactive web pages, cooking, mixology, traveling & music.</span>
+				</div>
 			</div>
 			<div class="groupup">
 				<div class="black_left">
@@ -33,7 +104,7 @@
 					<div class="right_holder waitlast">
 						<div class="r50b500">About_</div>
 						<p class="r15b400">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-						<div class="r15b700 space50"><a href="#" target="_blank" class="underline">View here</a> or<br><a href="#" target="_blank" class="underline">download my Curriculum +</a></div>
+						<div class="r15b700 space50"><span target="_blank" class="underline" id="screen_portf"><a>View</a></span> or <a href="" target="_blank" class="underline">download</a> Curriculum +</div>
 					</div>
 					<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 				</div>
