--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 				<div class="first_col">
 					<span class="r30b500">Yago Murakami | yagowns@gmail.com</span>
 					<div class="space10"></div>
-					<div class="r20b500">Currently based in <a class="map">Lisbon, Portugal</a></div>
+					<div class="r20b500">Currently based in <a class="underline map">Lisbon, Portugal</a></div>
 					<div class="space50"></div>
 				</div>
 				<div class="second_col">
