--- a/about.html
+++ b/about.html
@@ -89,6 +89,9 @@
 					<div class="space10"></div>
 					<span class="r15b400">Reading/collecting books & comics, writing short stories, painting (leaning towards color field & geometric abstraction styles), programming interactive/reactive web pages, cooking, mixology, traveling & music.</span>
 				</div>
+				<div class="map_circle">
+					<img src="lisbon.png">
+				</div>
 			</div>
 			<div class="groupup">
 				<div class="black_left">
