--- a/about.html
+++ b/about.html
@@ -90,7 +90,9 @@
 					<span class="r15b400">Reading/collecting books & comics, writing short stories, painting (leaning towards color field & geometric abstraction styles), programming interactive/reactive web pages, cooking, mixology, traveling & music.</span>
 				</div>
 				<div class="map_circle">
-					<img src="lisbon.png">
+					<div class="map_circle_pos">
+						<img src="lisbon.png">
+					</div>
 				</div>
 			</div>
 			<div class="groupup">
