--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="map_circle">
 					<div class="map_circle_pos">
-						<img src="lisbon.png">
+						<img src="img/lisbon.png">
 					</div>
 				</div>
 			</div>
