--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 					<div class="right_holder waitlast">
 						<div class="r50b500">About_</div>
 						<p class="r15b400">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-						<div class="r15b700 space50"><span target="_blank" class="underline" id="screen_portf"><a>View</a></span> or <a href="" target="_blank" class="underline">download</a> Curriculum +</div>
+						<div class="r15b700 space50"><span target="_blank" class="underline" id="screen_portf"><a>View</a></span> or <a href="" target="_blank" class="underline">download</a> Curriculum</div>
 					</div>
 					<span class="work_spacing vertical_centered_text r40b500 underline"><a class="hide_hyper" href="work.html" id="work_about">My work</a></span>
 				</div>
