--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
 				<div class="white_left">
 					<div class="left_holder">
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="one">[A]Live Cash</a><span class="numbers r30y700">1</span>
+							<a href="first_work.html" class="underline" id="one">[A]Live Cash</a><span class="numbers r30y700">1</span>
 						</div>
 						<div class="r70b500 space30">
 							<a href="#" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
