--- a/first_work.html
+++ b/first_work.html
@@ -14,7 +14,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="works.html" class="back">&#11104; Works</a>
+					<a href="work.html" class="back">&#11104; Works</a>
 				</div>
 			</div>
 			<div class="section">
