--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 					<span class="r15b400">Marketing & Communication Agency,<br>Web & Graphic Designer,<br>October 2016 to present day, Lisbon, Portugal</span>
 					<div class="space20 divider"></div>
 					<div class="space20"></div>
-					<span class="r20b500">= 5 years of agency experience.</span>
+					<span class="r20b500">&#8776; 5 years of agency experience.</span>
 				</div>
 				<div class="fourth_col">
 					<span class="r20b500">&#11106; Knowledge and Skills</span>
