--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
 							<a href="first_work.html" class="underline" id="one">[A]Live Cash</a><span class="numbers r30y700">1</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
+							<a href="second_work.html" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
 						</div>
 						<div class="r70b500 space30">
 							<a href="#" class="underline" id="three">MDS Rebrand</a><span class="numbers r30y700">3</span>
