--- a/second_work.html
+++ b/second_work.html
@@ -63,7 +63,7 @@
 						<div class="fullsize">
 							<img src="img/purge_infra.png" class="img_resp_center">
 							<div class="space10"></div>
-							<div class="r15b400"><a href="/img/purge_infra_fullsize.png">Click here</a> to download the full-size image.</div>
+							<div class="r15b400"><a href="https://yagowns.github.io/portfolio/img/purge_infra_fullsize.png">Click here</a> to download the full-size image.</div>
 						</div>
 					</div>
 					<div class="row space50 space50down">
