--- a/work.html
+++ b/work.html
@@ -50,13 +50,13 @@
 							<a href="second_work.html" class="underline" id="two">Purge App</a><span class="numbers r30y700">2</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="three">MDS Rebrand</a><span class="numbers r30y700">3</span>
+							<a href="third_work.html" class="underline" id="three">MDS Rebrand</a><span class="numbers r30y700">3</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
+							<a href="fourth_work.html" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="#" class="underline" id="five">Logofolio</a><span class="numbers r30y700">5</span>
+							<a href="fith_work.html" class="underline" id="five">Logofolio</a><span class="numbers r30y700">5</span>
 						</div>
 						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
