--- a/first_work.html
+++ b/first_work.html
@@ -15,6 +15,7 @@
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
 					<a href="work.html" class="back">&#11104; Works</a>
+					<a href="second_work.htmll" class="back">Next Project &#11106;</a>
 				</div>
 			</div>
 			<div class="section">
