--- a/first_work.html
+++ b/first_work.html
@@ -131,5 +131,6 @@
 		</div>
 	</div>
 </body>
+	<script type="text/javascript" src="js/audio.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </html>
