--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
 		</div>
 	</div>
 </body>
+	<script type="text/javascript" src="js/audio.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </html>
