--- a/third_work.html
+++ b/third_work.html
@@ -94,5 +94,6 @@
 		</div>
 	</div>
 </body>
+	<script type="text/javascript" src="js/audio.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </html>
