--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
 							<a href="fourth_work.html" class="underline" id="four">100K Lives Slot Machine</a><span class="numbers r30y700">4</span>
 						</div>
 						<div class="r70b500 space30">
-							<a href="fith_work.html" class="underline" id="five">Logofolio</a><span class="numbers r30y700">5</span>
+							<a href="fith_work.html" class="underline" id="five">This Website / Portfolio</a><span class="numbers r30y700">5</span>
 						</div>
 						<div class="r15b500 space50"><a href="#more" class="underline" id="work_down">Scroll down for more</a></div>
 					</div>
@@ -66,7 +66,7 @@
 					<img src="img/purge2.gif" class="showcase_img" id="project_two">
 					<img src="img/minuto2.gif" class="showcase_img" id="project_three">
 					<img src="img/100klives2.gif" class="showcase_img" id="project_four">
-					<img src="img/2.png" class="showcase_img" id="project_five">
+					<img src="img/this.gif" class="showcase_img" id="project_five">
 				</div>
 				<div class="below_white" id="more">
 					<div class="web_work">
