--- a/what.html
+++ b/what.html
@@ -81,7 +81,7 @@
 							<img src="img/12.jpg" class="img_resp_center">
 						</div>
 						<div class="fourth_fourth space40">
-							<img src="" class="img_resp_center">
+							<img src="img/13.jpg" class="img_resp_center">
 						</div>
 					</div>
 				</div>
