--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back">&#11104; go back</a>
+					<a href="about.html" class="back_white">&#11104; go back</a>
 				</div>
 			</div>
 			<div class="portf_group animated fadeIn faster delay-150ms">
