--- a/what.html
+++ b/what.html
@@ -14,7 +14,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="index.html" class="back">&#11104; Home</a>
+					<a href="index.html" class="back_black">&#11104; Home</a>
 				</div>
 			</div>
 			<div class="section">
