--- a/first_work.html
+++ b/first_work.html
@@ -16,7 +16,7 @@
 				<div class="back_menu">
 					<a href="work.html" class="back">&#11104; Works</a>
 					<br>
-					<a href="second_work.html" class="back">Next Project &#11106;</a>
+					<a href="second_work.html" class="back_black">Next Project &#11106;</a>
 				</div>
 			</div>
 			<div class="section">
