--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 						<div class="r70w500"><span id="first">Visual</span><br><span id="second">Designer,</span><br><span id="third">Creative</span><br><span id="fourth">& Maker.</span></div>
 						<div class="r20y500 space10 waitlast">Yago Murakami</div>
 						<div class="r15w300 space50 waitlast"><a href="mailto:yagowns@gmail.com" target="_blank" class="underline">yagowns@gmail.com</a><br>@yagomurakami</div>
-						<div class="r15w500 space50 waitlast"><a href="https://www.behance.net/YagoMurakami" target="_blank" class="underline">Behance</a> — <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a> — <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a> — <a href="https://github.com/yagowns" target="_blank" class="underline">Github</a></div>
+						<div class="r15w500 space50 waitlast"><a href="https://www.behance.net/YagoMurakami" target="_blank" class="underline">Behance</a> — <a href="https://www.instagram.com/yagomurakami/" class="underline">Instagram</a><br class="breakline"> — <a href="https://www.linkedin.com/in/yagomurakami/" class="underline">Linkedin</a> — <a href="https://github.com/yagowns" target="_blank" class="underline">Github</a></div>
 					</div>
 				</div>
 				<div class="yellow_right">
