--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="js/barba.min.js" type="text/javascript"></script>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
 	<div class="groupup" id="barba-wrapper">
