--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="js/barba.min.js" type="text/javascript"></script>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta charset=utf-8>
 </head>
 <body>
 	<div class="groupup" id="barba-wrapper">
@@ -20,7 +20,7 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back_white">&#11104; go back</a>
+					<a href="about.html" class="back_white"><img src="img/leftwards_triangleheaded_arrow.svg"> go back</a>
 				</div>
 			</div>
 			<div class="portf_group animated fadeIn faster delay-150ms">
