--- a/about.html
+++ b/about.html
@@ -20,7 +20,15 @@
 			<div class="top_left">
 				<span class="r40y500" id="yagomurakami">Ya Mu</span>
 				<div class="back_menu">
-					<a href="about.html" class="back_white">go back</a>
+					<a href="about.html" class="back_white">
+						<svg fill-opacity="1" xmlns:xlink="http://www.w3.org/1999/xlink" color-rendering="auto" color-interpolation="auto" text-rendering="auto" stroke="black" stroke-linecap="square" stroke-miterlimit="10" shape-rendering="auto" stroke-opacity="1" fill="black" stroke-dasharray="none" font-weight="normal" stroke-width="1" xmlns="http://www.w3.org/2000/svg" font-family="&apos;Dialog&apos;" font-style="normal" stroke-linejoin="miter" font-size="12" stroke-dashoffset="0" image-rendering="auto">
+  						<!--Unicode Character 'LEFTWARDS TRIANGLE-HEADED ARROW' (U+2B60)-->
+						<g><g>
+							  <path d="M229.2188 271.4062 L73.125 271.4062 L73.125 313.0312 L21.0938 261 L73.125 208.9688 L73.125 250.5938 L229.2188 250.5938 L229.2188 271.4062 Z" stroke="none"/>
+						</g></g>
+						</svg>
+						go back
+					</a>
 				</div>
 			</div>
 			<div class="portf_group animated fadeIn faster delay-150ms">
